# DroneGroundControl

./: CMakeLists.txt  main.cpp  resource.qrc
qml/: Main.qml
qml/components/: AttitudeIndicator.qml  Battery.qml  Compass.qml  ConnectionButton.qml  ControlPad.qml  MagnetometerPointCloudView.qml  MessageBox.qml  SensorStatus.qml  SerialPortConnection.qml  StyledButton.qml  StyledPanel.qml  StyledProgressBar.qml  StyledSelect.qml  StyledTab.qml  UdpConnection.qml
qml/pages/: DataChartGraphsPage.qml  DataChartPage.qml  DataFrameTablePage.qml  GroundControlPage.qml  HomePage.qml  MagnetometerPointCloudWindow.qml  MixerPage.qml  ParameterPage.qml  RC.qml  RcSimulatorWindow.qml  SensorImuPage.qml  SensorMagnetometerPage.qml  SensorPage.qml
resources/: DataFrameDefination.json
resources/icons/: app.icns
src/app/: AnotcRequestManager.cpp  AnotcRequestManager.h  ConnectionSession.cpp  ConnectionSession.h  ConnectionSessionBridge.cpp  ConnectionSessionBridge.h  DataChartBenchmarkRunner.cpp  DataChartBenchmarkRunner.h  DataChartGraphsAdapter.cpp  DataChartGraphsAdapter.h  DataChartModel.cpp  DataChartModel.h  DataChartView.cpp  DataChartView.h  DataFrameTableModel.cpp  DataFrameTableModel.h  Flight.cpp  Flight.h  MagnetometerCalibration.cpp  MagnetometerCalibration.h  ParameterStore.cpp  ParameterStore.h  RcChannelModel.cpp  RcChannelModel.h
src/connection/: ConnectionConfig.h  ITransport.h  SerialTransport.cpp  SerialTransport.h  UdpTransport.cpp  UdpTransport.h
src/protocol/: AnotcCmdFrame.h  AnotcConfigFrame.h  AnotcFrame.h  AnotcProtocolSession.cpp  AnotcProtocolSession.h  AnotcResponseMatcher.cpp  AnotcResponseMatcher.h  IProtocolSession.h  ProtocolTypes.h
tools/: MagnetometerCalibrationCli.cpp  MagnetometerCalibrationTest.cpp  anotc_serial_sim.c
